# blog

./: .aiexclude  .dockerignore  .env  .env.example  .gitignore  .markdownlint.json  .markdownlint_ignore  AGENTS.md  Caddyfile  Dockerfile  GEMINI.md  LICENSE  README.md  WinSCP_deploy.txt.dist  __OLD__giscus.json  compose.yaml  config.yaml  deploy.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-entrypoint.sh  docusaurus.config.js  entrypoint.sh  localhost-key.pem  localhost.pem  makefile  package-lock.json  package.json  sidebars.js
.claude/: settings.json  settings.local.json
.config/: .markdownlint.json  .markdownlint_ignore  .pre-commit-config.yaml  cspell_blog.txt  typos.toml
.continue/: config.json
.devcontainer/: .env  .env.example  Dockerfile  bash_helpers.sh  (+4 more)
.unpublished/ollama-refactor-code/files/: .dockerignore  Dockerfile  dumpfiles.sh  dumpfiles.txt  pyproject.toml  readme.md
.unpublished/ollama-refactor-code/files/.devcontainer/: Dockerfile  devcontainer.json
.unpublished/ollama-refactor-code/files/config/: settings.yaml
.unpublished/ollama-refactor-code/files/config/rules/: default.txt  global.txt  output_format.txt  patterns.yaml
.unpublished/ollama-refactor-code/files/config/rules/ext/: json.txt  md.txt  php.txt  py.txt  qmd.txt  sh.txt  yaml.txt
.unpublished/ollama-refactor-code/files/config/rules/templates/: devcontainer.json.txt  docker-compose.txt  dockerfile.txt
.unpublished/ollama-refactor-code/files/src/: analyzer.py  app.py  main.py  ollama_client.py
.unpublished/ollama-refactor-code/files/src/cli/: diff.py  ui.py
.unpublished/ollama-refactor-code/files/src/core/: __init__.py  analyzer.py  config_loader.py  file_utils.py  parser.py  result_handler.py  rules.py  types.py  validator.py
.unpublished/ollama-refactor-code/files/src/core/exceptions/: __init__.py  config.py  files.py  ollama.py  rules.py
.unpublished/ollama-refactor-code/files/src/infra/: cache.py  git.py  network_checker.py  ollama.py
.unpublished/python-ai-helper/files/: Dockerfile  agent.yaml  compose.yaml  helper.py  makefile  pyproject.toml
.unpublished/python-ai-helper/files/src/: main.py
.unpublished/python-ai-helper/files/src/core/: docstring.py  llm.py  logger.py
.unpublished/python-ai-helper/files/src/tasks/: base.py  unit_test.py
.unpublished/python-ai-helper/files/tests/: test_helper.py
(+2483 files in other folders)
