[project]
name = "ai-reviewer"
version = "0.1.0"
description = "Elite AI Code Reviewer via Ollama"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-requests",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- START: CORRECTED SECTION ---
# This section explicitly tells the wheel builder what to include in the package.
# For a "src" layout, this is the modern and correct way to configure it.
[tool.hatch.build.targets.wheel]
include = ["/src"]
# --- END: CORRECTED SECTION ---

[tool.mypy]
strict = true
cache_dir = "/tmp/.mypy_cache"

[tool.ruff]
cache-dir = "/tmp/.ruff_cache"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "ANN"]
